--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  http: ^0.12.0+2
+  progress_indicators: ^0.1.2
+  fluttertoast: ^2.2.11
+
 
 dev_dependencies:
   flutter_test:
@@ -52,10 +56,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Monstserrat
-      fonts:
-        - asset: fonts/Montserrat-ReLightgular.otf
+  #  fonts:
+  #    - family: Monstserrat
+  #      fonts:
+  #        - asset: fonts/Montserrat-Light.otf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
